# tile-kernels-ascend

./: .gitignore  README.md  bench_aclnn.py  bench_native_ops.py  generate_support_status.py  pyproject.toml  reference_loc_detailed.md
benchmark/: benchmark_results.json  conftest.py
benchmark/engram/: bench_engram.py
benchmark/mhc/: bench_mhc.py
benchmark/moe/: bench_moe.py
benchmark/quant/: bench_quant.py
benchmark/transpose/: bench_transpose.py
demo/quant/: SIM_RESULTS.md  demo_npu_anti_quant.py  demo_npu_dynamic_block_quant.py  demo_npu_dynamic_quant.py  demo_npu_swiglu_quant.py  run_all.sh  run_sim.sh  run_sim_all.sh
docs/: native_ops_audit.md
tests/: pytest_plugins.py  test_aclnn_backends.py
tests/engram/: test_engram_fused_weight.py  test_engram_gate_bwd.py  test_engram_gate_fwd.py  test_engram_grad_w_reduce.py  test_engram_hash.py
tests/mhc/: test_expand.py  test_head_compute_mix.py  test_multilayer_recompute.py  test_norm_fn.py  test_post.py  test_pre_apply_mix.py  test_pre_big_fuse.py  test_pre_split_mixes.py  test_sinkhorn.py
tests/moe/: test_aux_fi.py  test_expand_to_fused.py  test_get_fused_mapping.py  test_group_count.py  test_inplace_unique_group_indices.py  test_mask_indices_by_tp.py  test_normalize_weight.py  test_reduce_fused.py  test_top2_sum_gate.py  test_topk_gate.py  test_topk_sum_and_topk_idx.py
tests/quant/: test_cast_back.py  test_cast_back_e5m6.py  test_per_block_cast.py  test_per_block_cast_lossless.py  test_per_channel_cast.py  test_per_channel_cast_and_transpose.py  test_per_channel_cast_fused.py  test_per_token_cast.py  (+4 more)
(+23 files in other folders)
